fix errors with certain ids not showing image properly add backup img location add logic for each option in the dropdown

--- a/style.css
+++ b/style.css
@@ -642,7 +642,8 @@ div#not-found-message {
 /* css for whos that pokemon game */
 
 .wtp .pokemon-svg {
-  width: 50%;
+  aspect-ratio: 1/1;
+  width: 400px;
 
   filter: brightness(0);
 }
